actualice los rates

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         </div>
 
         <div class="rate">
-          <div class="rate1"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""> 5 Stars in Reviews</p></div>
-          <div class="rate2"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""> 5 Stars in Report Guru</p></div>
-          <div class="rate3"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""> 5 Stars in BestTech</p></div>
+          <div class="rate1"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in Reviews</span></p></div>
+          <div class="rate2"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in Report Guru</p>
+          </span></div>
+          <div class="rate3"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in BestTech</p></span></div>
         </div>
       </div>
       <div class="cardcontainer">
