separe las estrellitas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="rate1"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in Reviews</span></p></div>
           <div class="rate2"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in Report Guru</p>
           </span></div>
-          <div class="rate3"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in BestTech</p></span></div>
+          <div class="rate3"><p><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><img src=images/icon-star.svg alt=""><span> 5 Stars in BestTech</span></p></div>
         </div>
       </div>
       <div class="cardcontainer">
